--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>JesperBry – Home</title>
+    <style>
+      body {
+        background-color: black;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
