--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,12 @@
     <title>JesperBry – Home</title>
     <style>
       body {
-        background-color: black;
+        height: 100vh;
+        background-image: url("%PUBLIC_URL%/bg_image.png");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        overflow: hidden;
       }
     </style>
   </head>
