--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,12 @@
     <title>JesperBry – Home</title>
     <style>
       body {
-        height: 100vh;
+        max-width: 100%;
+        max-height: 100%;
         background-image: url("%PUBLIC_URL%/bg_image.png");
-        background-position: center;
+        background-position: center center;
         background-repeat: no-repeat;
+        background-attachment: fixed;
         background-size: cover;
         overflow: hidden;
       }
